force-app/main/default/objects/Maintenance_Contribution__c/Maintenance_Contribution__c.object-meta.xml
<CustomObject>
    <label>Maintenance Contribution</label>
    <nameField>
        <label>Maintenance Contribution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Contributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>