force-app/main/default/objects/Maintenance_Contribution__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Maintenance Contributions</relationshipLabel>
    <relationshipName>Maintenance_Contributions</relationshipName>
    <type>Lookup</type>
</CustomField>