force-app/main/default/objects/Maintenance_Contribution__c/fields/Maintenance_Request__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Related Maintenance Request</inlineHelpText>
    <label>Maintenance Request</label>
    <referenceTo>Maintenance_Request__c</referenceTo>
    <relationshipLabel>Maintenance Contributions</relationshipLabel>
    <relationshipName>Maintenance_Contributions</relationshipName>
    <type>Lookup</type>
</CustomField>