force-app/main/default/objects/Maintenance_Contribution__c/fields/Resident__c.field-meta.xml
<CustomField>
    <fullName>Resident__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resident who paid this contribution</label>
    <referenceTo>Resident__c</referenceTo>
    <relationshipLabel>Maintenance Contributions</relationshipLabel>
    <relationshipName>Maintenance_Contributions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>