force-app/main/default/objects/Maintenance_Contribution__c/recordTypes/For_Asset.recordType-meta.xml
<RecordType>
    <fullName>For_Asset</fullName>
    <active>true</active>
    <description>create maintenance contribution record for any asset purchased</description>
    <label>For Asset</label>
</RecordType>