force-app/main/default/objects/Maintenance_Contribution__c/recordTypes/For_Maintenance_Request.recordType-meta.xml
<RecordType>
    <fullName>For_Maintenance_Request</fullName>
    <active>true</active>
    <description>create maintenance contribution record for any maintenance request</description>
    <label>For Maintenance Request</label>
</RecordType>